# rust-axum_video_editing_backend

./: .env  Cargo.toml  README.md  sea-orm-cli.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20250601_084450_create_video_table.rs  m20250601_084504_create_subtitle_table.rs
src/: main.rs
src/config/: constant.rs
src/database/: connection.rs
src/entities/: mod.rs  prelude.rs  subtitle.rs  video.rs
src/handlers/: mod.rs  video_handlers.rs
src/lib/: error_response.rs  ffmpeg.rs  file_upload.rs
src/models/: mod.rs  subtitle.rs  video.rs
src/routes/: mod.rs  video_routes.rs
src/services/: video_service.rs
