[package]
name = "video_editing_backend_rust"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]


[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
anyhow = "1.0.98"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["multipart"] }
dotenvy = "0.15.7"
ffmpeg-cli = "0.1.0"
hyper = "1.6.0"
sea-orm = { version = "1.1.10", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "fs", "process" ] }
tokio-util = { version = "0.7.15", features = ["io"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4"] }
chrono = "0.4.41"
ffprobe = "0.4.0"
